# phototools

./: LICENSE  README.md  pyproject.toml
src/phototools/: __init__.py  generate_thumbs.py  rename_images.py  resize_images.py
