[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phototools"
version = "0.2.0"
description = "Tools for automating photo workflows"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "AeroNib"}
]
keywords = ["photo", "exif", "rename", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/AeroNib/phototools"
Repository = "https://github.com/AeroNib/phototools"
Issues = "https://github.com/AeroNib/phototools/issues"

[project.scripts]
rename_images = "phototools.rename_images:main"
resize_images = "phototools.resize_images:main"
generate_thumbs = "phototools.generate_thumbs:main"
